--- a/index.html
+++ b/index.html
@@ -1,56 +1,73 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>My landing page</title>
-  <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
-  <!-- We need this line below for responsiveness! -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <!-- code a Hero / Banner section -->
-  <div id="banner">
-    <div class="container">
-      <h1>Hello</h1>
-      <p>This is my landing page. Here you will find some cool stuff.</p>
-      <br>
-      <a href="#" class="btn-yours">Sign up</a>
-    </div>
-  </div>
-  <!-- code a "How it works" section -->
-  <div class="container">
-    <h2>How it works</h2>
-    <div class="cards">
-      <div class="card">
-        <img src="images/apply.svg" alt="">
-        <h3>Apply</h3>
-        <p>Lorem ipsum dolor sit amet.</p>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>My landing page</title>
+    <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
+    <!-- We need this line below for responsiveness! -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <!-- code a header -->
+    <div class="header">
+      <div class="left">
+        <div class="logo">
+          Header Logo
+        </div>
       </div>
-      <div class="card">
-        <img src="images/learn.svg" alt="">
-        <h3>Learn to code</h3>
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card">
-        <img src="images/product.svg" alt="">
-        <h3>Build products</h3>
-        <p>Lorem ipsum dolor sit amet.</p>
+      <div class="right">
+        <ul class="links">
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
+        </ul>
       </div>
     </div>
-  </div>
-
-  <!-- code a footer -->
-  <div class="footer">
-    <h2>Find me on:</h2>
-    <ul class="list-inline">
-      <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-      <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
-      <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-      <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-    </ul>
-    <p>This website was coded by Hubert at Lewagon.</p>
-  </div>
-</body>
+    <!-- code a body -->
+    <div class="body">
+      <!-- code a Hero / Banner section -->
+      <div id="banner">
+        <div class="container">
+          <h1>Hello</h1>
+          <p>This is my landing page. Here you will find some cool stuff.</p>
+          <br>
+          <a href="#" class="btn-yours">Sign up</a>
+        </div>
+      </div>
+      <!-- code a "How it works" section -->
+      <div class="container">
+        <h2>How it works</h2>
+        <div class="cards">
+          <div class="card">
+            <img src="images/apply.svg" alt="">
+            <h3>Apply</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+          <div class="card">
+            <img src="images/learn.svg" alt="">
+            <h3>Learn to code</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+          <div class="card">
+            <img src="images/product.svg" alt="">
+            <h3>Build products</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- code a footer -->
+    <div class="footer">
+      <h2>Find me on:</h2>
+      <ul class="list-inline">
+        <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+        <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+      </ul>
+      <p>This website was coded by Hubert at Lewagon.</p>
+    </div>
+  </body>
 </html>
