Finish the html and css part of quote section with flexbox

--- a/index.html
+++ b/index.html
@@ -25,37 +25,46 @@
         </ul>
       </div>
     </div>
-    <!-- code a body -->
-    <div class="body">
-      <!-- code a Hero / Banner section -->
-      <div id="banner">
-        <div class="container">
-          <h1>Hello</h1>
-          <p>This is my landing page. Here you will find some cool stuff.</p>
-          <br>
-          <a href="#" class="btn-yours">Sign up</a>
+    <!-- code a Hero / Banner section -->
+    <div id="banner">
+      <div class="container">
+        <h1>Hello</h1>
+        <p>This is my landing page. Here you will find some cool stuff.</p>
+        <a href="#" class="btn-yours">Sign up</a>
+      </div>
+    </div>
+    <!-- code a "How it works" section -->
+    <div class="container">
+      <div class="title">
+        How it works
+      </div>
+      <div class="cards">
+        <div class="card">
+          <img src="images/apply.svg" alt="">
+          <h3>Apply</h3>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="card">
+          <img src="images/learn.svg" alt="">
+          <h3>Learn to code</h3>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="card">
+          <img src="images/product.svg" alt="">
+          <h3>Build products</h3>
+          <p>Lorem ipsum dolor sit amet.</p>
         </div>
       </div>
-      <!-- code a "How it works" section -->
-      <div class="container">
-        <h2>How it works</h2>
-        <div class="cards">
-          <div class="card">
-            <img src="images/apply.svg" alt="">
-            <h3>Apply</h3>
-            <p>Lorem ipsum dolor sit amet.</p>
-          </div>
-          <div class="card">
-            <img src="images/learn.svg" alt="">
-            <h3>Learn to code</h3>
-            <p>Lorem ipsum dolor sit amet.</p>
-          </div>
-          <div class="card">
-            <img src="images/product.svg" alt="">
-            <h3>Build products</h3>
-            <p>Lorem ipsum dolor sit amet.</p>
-          </div>
-        </div>
+    </div>
+    <!-- code a quote section -->
+    <div class="quote-section">
+      <div class="quote">
+        <em>
+          This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+        </em>
+      </div>
+      <div class="author">
+        -Thor, God of Thunder
       </div>
     </div>
     <!-- code a footer -->
